--- a/examples/dialog/index.html
+++ b/examples/dialog/index.html
@@ -43,7 +43,9 @@
               <dialog
                 ref='dialog'
                 onCancel={this.handleCancel}
+                onCancelCapture={this.handleCancel}
                 onClose={this.handleClose}
+                onCloseCapture={this.handleClose}
               >
                 <h1>Dialog</h1>
                 <button onClick={this.handleCloseClick}>
